Fix overflow issues with form section

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Resetting CSS */
 
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video { margin: 0; padding: 0; border: 0; font-size: 100%; vertical-align: baseline;}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section { display: block;}
 body { line-height: 1;}
 ol,ul { list-style: none;}
@@ -8,17 +8,18 @@ blockquote,q { quotes: none;}
 blockquote:before,blockquote:after,q:before,q:after { content: ''; content: none;}
 table { border-collapse: collapse; border-spacing: 0;}
 
-*{
-    box-sizing: border-box;
-}
-
-/* ----------- */
-
 @font-face{
     font-family: bebas-neue-regular;
     src: url(./font/BebasNeue-Regular.ttf);
 }
 
+
+*{
+    box-sizing: border-box;
+    font-family: bebas-neue-regular, Arial, Helvetica, sans-serif;
+}
+
+/* ----------- */
 body{
     border: 0px solid green;
     display: flex;
@@ -45,7 +46,6 @@ body{
     justify-content: center;
 
     .banner {
-        font-family: bebas-neue-regular, Arial, Helvetica, sans-serif;
         flex: 1;
         background-color: rgba(0,0,0,0.4);
         color: white;
@@ -65,7 +65,7 @@ body{
     .attribution{
         position: absolute;
         align-self: flex-end;
-        translate: 0 -.5em;
+        translate: 0 -0.5em;
         background-color: rgba(0,0,0,0.4);
         color: rgba(255,255,255,0.5);
 
@@ -92,15 +92,15 @@ body{
 
     .message{
         padding: 20px;
+        font-size: 2em;
     }
 
     form{
-        border: 1px solid red;
 
-    
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
+        overflow: scroll;
     
         button {
             width: 150px;
@@ -108,6 +108,8 @@ body{
             margin: 10px;
             border: 1px solid black;
             border-radius: 10px;
+
+            font-size: 1.5em;
         }
         padding: 10px;
     }
@@ -121,18 +123,40 @@ body{
             display: flex;
             flex-direction: column;
             padding: 10px;
+
+            label{
+                font-size: 1.75em;
+            }
+
+            input{
+                font-size: 1.75em;
+            }
         }
     
         .break{
-            border: 1px solid red;
             flex-basis: 100%;
             height: 0;
             row-gap: 0;
         }
     }
+
+    .divider{
+        height: 5px;
+        width: 100%;
+        background-color: lightgray;
+        color: black;
+    }
     
     footer{
         margin: 10px 20px;
     }
+}
+
+
+.sidebar{
+    border: 1px solid black;
+    height: clamp(800px, 100svh, 100svh);
+    background-color: black;
+    flex: 0.25 0.25 0;
 }
 
